# BeatFlipper

./: .gitignore  Biblioteki  README  README.md
BeatFlipper/: CMakeLists.txt  Main.cpp  OutputColors.cpp  OutputColors.h  Pobieraj.cpp  Pobieraj.h  ZmienneGlobalne.cpp  ZmienneGlobalne.h
BeatFlipper/BeatFlipper/: Pobieraj.cpp
Release/: BeatFlipper  BeatFlipper - MacOs
include/: Download.h  GlobalVariables.h  OutputColors.h  UtilityTool.h
src/: CMakeLists.txt  Download.cpp  GlobalVariables.cpp  GlobalVariables.h  Main.cpp  OutputColors.cpp  UtilityTool.cpp
